Avoid canvas-settings overlap

--- a/client/style.css
+++ b/client/style.css
@@ -79,7 +79,7 @@ html, body, .content, .game-container {
 	position: absolute;
 	width: 100%;
 	top: 110px;
-	bottom: 30px;
+	bottom: 38px;
 }
 
 .game-container {
